--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "compute-nanquantiles",
   "version": "0.9.0",
-  "description": " Computes a quantile for a numeric array ignoring all non-numeric values. ",
+  "description": " Computes quantiles for an array ignoring non-numeric values. ",
   "author": {
     "name": "Philipp Burckhardt",
     "email": "pburckhardt@outlook.com"
@@ -10,6 +10,10 @@
     {
       "name": "Philipp Burckhardt",
       "email": "pburckhardt@outlook.com"
+    },
+    {
+      "name": "Athan Reines",
+      "email": "kgryte@gmail.com"
     }
   ],
   "scripts": {
@@ -28,8 +32,17 @@
     "computation",
     "statistics",
     "stats",
+    "mathematics",
+    "math",
+    "quantile",
     "quantiles",
-    "percentiles"
+    "percentile",
+    "percentiles",
+    "median",
+    "array",
+    "min",
+    "max",
+    "range"
   ],
   "bugs": {
     "url": "https://github.com/compute-io/nanquantiles/issues"
@@ -37,13 +50,13 @@
   "dependencies": {
     "validate.io-array": "^1.0.3",
     "validate.io-boolean": "^1.0.4",
-    "validate.io-integer": "^1.0.5",
+    "validate.io-nonnegative-integer": "^1.0.0",
     "validate.io-number": "^1.0.3",
     "validate.io-object": "^1.0.3"
   },
   "devDependencies": {
-    "chai": "1.x.x",
-    "mocha": "1.x.x",
+    "chai": "2.x.x",
+    "mocha": "2.x.x",
     "coveralls": "^2.11.1",
     "istanbul": "^0.3.0",
     "jshint": "2.x.x",
